--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -47,6 +47,13 @@ Pending Graphics From Jon:
 
 
 Current tasks:
+    - Fix download speed can be very slow
+    - Reduce # of calls by combining image downloads
+    - Add material tile -> spirit tile mapping function:
+        - Add reasonable defaults like based on defaultLayer, solid, solidMap
+        - Check explicit tile mappings first
+        - Do this after we split tiles up into multiple tile sheets.
+
     - Add indicators for NPCs next dialogue option
         - Must assign every NPC text option a unique id and an optional type: quest, subquest, hint
             - objects with dialogue should
