--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -47,12 +47,15 @@ Pending Graphics From Jon:
 
 
 Current tasks:
+    - Crystal collector doesn't turn on waterfall second time.
+
     - Fix download speed can be very slow
-    - Reduce # of calls by combining image downloads
     - Add material tile -> spirit tile mapping function:
         - Add reasonable defaults like based on defaultLayer, solid, solidMap
         - Check explicit tile mappings first
         - Do this after we split tiles up into multiple tile sheets.
+
+    - populate project board with art tasks for Jon and prioritize them
 
     - Add indicators for NPCs next dialogue option
         - Must assign every NPC text option a unique id and an optional type: quest, subquest, hint
@@ -91,7 +94,6 @@ Current tasks:
     - Add push/pull instructions to the key room in tomb
         - Add respawn flag to objects that causes them to respawn if destroyed, use to prevent soft lock in tomb.
 
-    - Crystal collector doesn't turn on waterfall second time.
 
     - Use grey cloud tiles for lightning bolt cloud animation
         - Possibly also for the cloud tiles during the storm beast fight
