--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -37,26 +37,11 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Pending Graphics From Jon:
-    Cloud poof animation
-    Guardian Projection Boss animations
-    Golem graphic updates
-         Remove jewel from top of head
-         Make jewel in mouth more obvious
-    Spinning turret enemy graphics
-    Storm Beast Statue animations
-
+    - Golden quest marker for map.
+    - Eye graphics for looking into the spirit world
+    - Storm Beast Statue animations
 
 Current tasks:
-    - Add indicators for NPCs next dialogue option
-        - Must assign every NPC text option a unique id and an optional type: quest, subquest, hint
-            - objects with dialogue should
-        - Spirit king text should remove sections for completed dungeons.
-        - New vs Read dialogue (could just be 100 vs 50% opacity)
-        - Quest info Golden or Red !
-        - Side-quest info Green or Blue !
-        - hint ?
-        - generic text ... or empty bubble
-
     - Falling in water with high enough velocity transitions you underwater with slightly reduced velocity
         - Allows you to peak underwater, but not really do anything.
         - Might have a peach piece you can by falling fast enough into the water.
@@ -65,8 +50,6 @@ Current tasks:
         - Add reasonable defaults like based on defaultLayer, solid, solidMap
         - Check explicit tile mappings first
         - Do this after we split tiles up into multiple tile sheets.
-
-    - populate project board with art tasks for Jon and prioritize them
 
 
     - Forest temple boss should provide a golden peach in addition to the clone tool.
@@ -88,13 +71,11 @@ Current tasks:
         - Add both list of copied and not copied props, log warning if a property is not on a list and copy.
 
     - Fix ledge graphics in tomb
-        - War Temple
 
     - Make sure door open/close sound effects are playing
         - Check tomb crystal switch doors specifically.
 
-    - Add push/pull instructions to the key room in tomb
-        - Add respawn flag to objects that causes them to respawn if destroyed, use to prevent soft lock in tomb.
+    - Add respawn flag to objects that causes them to respawn if destroyed.
 
 
     - Use grey cloud tiles for lightning bolt cloud animation
