--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -42,7 +42,8 @@ Pending Graphics From Jon:
     - Storm Beast Statue animations
 
 Current tasks:
-    - missing hiddne ledges south of peach piece in war temple near big key,
+    - freezing tiles removes shadows
+        - mark shadows as not coverable.
     - for boss music: wait until area track fades out before starting boss music at full volume
         - fade boss music out when the boss is showing the defeated animation
     - make the map chest in the top right of the war temple accessible without gloves
