--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -41,6 +41,12 @@ Pending Graphics From Jon:
     - Storm Beast Statue animations
 
 Current tasks:
+    - Fix broken basement room in tree village.
+    - Fix spawn markers in wall of north forest temple.
+    - Fix broken door in elder spirit world.
+    - Fix you can somehow fall into the boss room in forest temple.
+    - Fix cloud boots don't allow running across multiple tiles any more.
+
     - Extract air stream effect so it can be used as an enemy ability
         - Add a warmup time that can be used as a tell (ramps up from 0-100% effect over N ms).
 
@@ -180,13 +186,12 @@ Current tasks:
         - Prize (Chakram/Tool/Victory Point)
 
 
+    - Allow lookind underwater with R2 when you do not have iron boots.
+        - Use same effect as spirit sight
     - Falling in water with high enough velocity transitions you underwater with slightly reduced velocity
+        - Make transition to underwater quicker so it is less annoying.
         - Allows you to peak underwater, but not really do anything.
         - Might have a peach piece you can by falling fast enough into the water.
-
-    - Update cavearranged to cavearraned2
-        - The only difference is that the northern ledge graphics are now at the top of the sprite instead of the bottom
-        - These are tiles 833,834
 
     - Forest temple boss should provide a golden peach in addition to the clone tool.
 
